third_party/move/move-compiler-v2/tests/checking/typing/bind_wrong_type.exp

Diagnostics:
error: expected `M::S` but found `M::R` in lvalue
  ┌─ tests/checking/typing/bind_wrong_type.move:6:13
  │
6 │         let S { g } = R {f :0};
  │             ^^^^^^^

error: expected `M::S` but found `M::R` in lvalue
  ┌─ tests/checking/typing/bind_wrong_type.move:7:14
  │
7 │         let (S { g }, R { f }) = (R{ f: 0 }, R{ f: 1 });
  │              ^^^^^^^

error: `integer` not compatible with `()` in lvalue
   ┌─ tests/checking/typing/bind_wrong_type.move:12:13
   │
12 │         let () = 0;
   │             ^^

error: expected 4 item(s), found 3
   ┌─ tests/checking/typing/bind_wrong_type.move:13:13
   │
13 │         let (x, b, R{f}) = (0, false, R{f: 0}, R{f: 0});
   │             ^^^^^^^^^^^^

error: expected 2 item(s), found 3
   ┌─ tests/checking/typing/bind_wrong_type.move:14:13
   │
14 │         let (x, b, R{f}) = (0, false);
   │             ^^^^^^^^^^^^

error: `integer` not compatible with `()` in constant
   ┌─ tests/checking/typing/bind_wrong_type.move:18:21
   │
18 │         let x: () = 0;
   │                     ^

error: expected `u64` but found `()` in expression
   ┌─ tests/checking/typing/bind_wrong_type.move:19:23
   │
19 │         let (): u64 = ();
   │                       ^^

error: expected `u64` but found `()` in lvalue
   ┌─ tests/checking/typing/bind_wrong_type.move:19:13
   │
19 │         let (): u64 = ();
   │             ^^

error: expected 4 item(s), found 3
   ┌─ tests/checking/typing/bind_wrong_type.move:20:47
   │
20 │         let (x, b, R{f}): (u64, bool, R, R) = (0, false, R{f: 0});
   │                                               ^^^^^^^^^^^^^^^^^^^

error: expected 4 item(s), found 3
   ┌─ tests/checking/typing/bind_wrong_type.move:20:13
   │
20 │         let (x, b, R{f}): (u64, bool, R, R) = (0, false, R{f: 0});
   │             ^^^^^^^^^^^^

error: expected 2 item(s), found 3
   ┌─ tests/checking/typing/bind_wrong_type.move:21:41
   │
21 │         let (x, b, R{f}): (u64, bool) = (0, false, R{f: 0});
   │                                         ^^^^^^^^^^^^^^^^^^^

error: expected 2 item(s), found 3
   ┌─ tests/checking/typing/bind_wrong_type.move:21:13
   │
21 │         let (x, b, R{f}): (u64, bool) = (0, false, R{f: 0});
   │             ^^^^^^^^^^^^
